# vortiq

./: README.md  main.py  pyproject.toml
src/1dedup/: dirTraversal.py  fileHash.py
src/2clustering/: dbscanModel.py  dirNaming.py  embeddings.py
src/clustering/: dbscanModel.py  dirNaming.py
src/dedup/: dirTraversal.py  fileStats.py
src/vortiq/: main.py
src/vortiq/clustering/: dbscanModel.py  dirNaming.py  embeddings.py  fileContent.py
src/vortiq/hitl/: __init__.py  confirm.py
