[project]
name = "vortex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.8.0",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "qdrant-client[fastembed]>=1.18.0",
    "scikit-learn>=1.8.0",
]
