[project]
name = "Vortiq"
version = "0.1.0"
description = "A lightning-fast, zero-cloud CLI utility that cleans your Windows directories by parsing file contents and visual data — automatically destroying clones and generating intelligently named folder structures."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.8.0",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "qdrant-client[fastembed]>=1.18.0",
    "scikit-learn>=1.8.0",
]
authors = [
    {name = "Om Patil", email = "44ompatil@gmail.com"}
]

[project.scripts]
vortiq = "vortiq.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]